--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <span class="random__content--tags__tag">choice3</span> -->
             </div>
             <button class="random__content--btn">Lucky</button>
+            <button class="random__content--btn__clear">Clear</button>
         </div>
     </section>
     <script src="js/main.js"></script>
