--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body tabIndex=0>
     <section class="random">
         <div class="random__content">
             <h3 class="random__content--title">Enter all of the choices divided by a comma (',')
